[metadata]
name = mcap-can-support
version = attr: mcap_can.__version__
description = CanBus support for the Python MCAP library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/foxglove/mcap
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    mcap>=0.0.14
    cantools>=37.0.0
    python-can>=4.0.0
install_package_data = True
packages = find:
python_requires = >=3.7

[options.package_data]
mcap_protobuf = py.typed
